--- a/index.html
+++ b/index.html
@@ -13,12 +13,13 @@
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
 
-    <title>Scribe-for-makers by ScribeLabs</title>
+    <title>Scribe-for-Makers by ScribeLabs</title>
   </head>
 
   <body>
     <header>
       <div class="inner">
+        <h1>Scribe-for-Makers</h1>
         <h2>Scribe for Makers</h2>
         <a href="https://github.com/ScribeLabs/scribe-for-makers" class="button"><small>View project on</small> GitHub</a>
       </div>
@@ -28,29 +29,27 @@
       <div class="inner clearfix">
         <section id="main-content">
           <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+<a id="welcome-to-the-scribe-for-makers-github-repository" class="anchor" href="#welcome-to-the-scribe-for-makers-github-repository" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to the Scribe for Makers GitHub repository.</h3>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here <a href="https://guides.github.com/features/mastering-markdown/">using GitHub Flavored Markdown</a>, select a template crafted by a designer, and publish. After your page is generated, you can check out the new <code>gh-pages</code> branch locally. If you’re using GitHub Desktop, simply sync your repository and you’ll see the new branch.</p>
-
-<h3>
-<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Designer Templates</h3>
-
-<p>We’ve crafted some handsome templates for you to use. Go ahead and click 'Continue to layouts' to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved.</p>
+<p>We've created a number of development tools that will make it easier for you to work with Scribe.</p>
 
 <h3>
-<a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Creating pages manually</h3>
+<a id="python-sdk" class="anchor" href="#python-sdk" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a><a href="https://github.com/ScribeLabs/scribe-python-sdk">Python SDK</a>
+</h3>
 
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
-
-<h3>
-<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Authors and Contributors</h3>
-
-<p>You can @mention a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor’s GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
+<p>Our Python tools allow you to interact with your Scribe (Configure/Control/Query/Transfer)</p>
 
 <h3>
-<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Support or Contact</h3>
+<a id="bluetooth-low-energy-frameworks-for-both-ios-and-android" class="anchor" href="#bluetooth-low-energy-frameworks-for-both-ios-and-android" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Bluetooth low energy Frameworks for both <a href="https://github.com/ScribeLabs/scribe-ios-framework">iOS</a> and <a href="https://github.com/ScribeLabs/scribe-android-framework">Android</a>
+</h3>
 
-<p>Having trouble with Pages? Check out our <a href="https://help.github.com/pages">documentation</a> or <a href="https://github.com/contact">contact support</a> and we’ll help you sort it out.</p>
+<p>We provide BLE frameworks for both iOS and Android to make it easy for your apps to connect with your Scribe.</p>
+
+<h3>
+<a id="reference-apps-for-both-ios-and-android" class="anchor" href="#reference-apps-for-both-ios-and-android" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Reference Apps for both <a href="https://github.com/ScribeLabs/scribe-ios-app">iOS</a> and <a href="https://github.com/ScribeLabs/scribe-android-app">Android</a>
+</h3>
+
+<p>You can use our Reference Apps to immediately begin collecting data, or as a starting point for your own application.</p>
         </section>
 
         <aside id="sidebar">
