--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <body>
     <header>
       <div class="inner">
-        <h1>Scribe-for-Makers</h1>
+        <h1>Scribe Labs</h1>
         <h2>Scribe for Makers</h2>
         <a href="https://github.com/ScribeLabs/scribe-for-makers" class="button"><small>View project on</small> GitHub</a>
       </div>
